# vic20recomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: hardware.md
include/vic20recomp/: cpu.h  mem.h  recomp_rt.h  video.h
src/: cpu.c  mem.c  recomp_rt.c  video.c
tools/m6502recomp/: CMakeLists.txt  a2regs.c  a2regs.h  analyze.c  analyze.h  decode.c  decode.h  emit.c  emit.h  main.c
